--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,8 +1,12 @@
 [versions]
+exposed-version = "0.56.0"
+h2-version = "2.3.232"
 json-path = "2.9.0"
 kotlin = "2.1.10"
 ktor = "3.2.3"
 logback = "1.5.13"
+postgres-version = "42.7.4"
+
 
 [libraries]
 json-path = { module = "com.jayway.jsonpath:json-path", version.ref = "json-path" }
@@ -16,6 +20,13 @@ ktor-serialization-kotlinx-json = { module = "io.ktor:ktor-serialization-kotlinx
 ktor-server-status-pages = { module = "io.ktor:ktor-server-status-pages", version.ref = "ktor"}
 ktor-server-thymeleaf = { module = "io.ktor:ktor-server-thymeleaf", version.ref = "ktor" }
 ktor-server-test-host = { module = "io.ktor:ktor-server-test-host", version.ref = "ktor" }
+
+exposed-core = { module = "org.jetbrains.exposed:exposed-core", version.ref = "exposed-version" }
+exposed-jdbc = { module = "org.jetbrains.exposed:exposed-jdbc", version.ref = "exposed-version" }
+exposed-dao = { module = "org.jetbrains.exposed:exposed-dao", version.ref = "exposed-version" }
+h2 = { module = "com.h2database:h2", version.ref = "h2-version" }
+postgresql = { module = "org.postgresql:postgresql", version.ref = "postgres-version" }
+
 
 kotlin-test-junit = { module = "org.jetbrains.kotlin:kotlin-test-junit", version.ref = "kotlin" }
 
