Working DB integration

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -13,7 +13,7 @@ services:
     volumes:
       - postgres_data:/var/lib/postgresql/data
     healthcheck:
-      test: [ "CMD-SHELL", "pg_isready -d ${POSTGRES_DB} -U ${POSTGRES_USER}"]
+      test: [ "CMD-SHELL", "pg_isready -d chefai_db -U postgres" ]
       interval: 1s
       timeout: 5s
       retries: 10
