Fix app conf typo

--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -1,6 +1,6 @@
 DB_HOST=localhost
 DB_PORT=5432
-The ones below are provided by the environment
-#DB_USER=chefai
-#DB_PASSWORD=xxxx
-#DB_NAME=chefai
+# The ones below are provided by the environment
+# DB_USER=chefai
+# DB_PASSWORD=xxxx
+# DB_NAME=chefai
