--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -1,6 +1,5 @@
-DB_HOST=localhost
+DB_HOST=db #might not work for local dev
 DB_PORT=5432
-# The ones below are provided by the environment
-# DB_USER=chefai
-# DB_PASSWORD=xxxx
-# DB_NAME=chefai
+DB_USER=postgres
+DB_PASSWORD=password
+DB_NAME=chefai_db
